tests/snapshots/json_contract__changelog_check_json_contract.snap
---
source: tests/json_contract.rs
expression: payload
---
{
  "has_entries": true,
  "invalid_fragments": [],
  "needs_entry": true,
  "ok": false,
  "packages": [
    {
      "changed": true,
      "fragments": 1,
      "has_entry": true,
      "name": "lat_core"
    },
    {
      "changed": true,
      "fragments": 0,
      "has_entry": false,
      "name": "lat_mid"
    }
  ],
  "preview": "[markdown]",
  "schema": "trellis.changelog_check/1",
  "strictness": "error"
}
