tests/snapshots/json_contract__ci_tag_package_json_contract_for_a_series_tag.snap
---
source: tests/json_contract.rs
expression: "json_output(root, &[\"ci\", \"tag-package\", \"lat_cli-v0.3\", \"--json\"], true,)"
---
{
  "name": "lat_cli",
  "path": "packages/lat_cli",
  "schema": "trellis.ci_tag_package/1",
  "tag_kind": "series",
  "tag_series": "0.3",
  "version": "0.3.1"
}
