tests/snapshots/json_contract__doctor_json_contract_on_a_healthy_workspace.snap
---
source: tests/json_contract.rs
expression: "json_output(&fixture(\"basic\"), &[\"doctor\", \"--format\", \"json\"], true)"
---
{
  "applied": [],
  "auto-members": false,
  "configless": false,
  "findings": [],
  "fixes": [],
  "members": 4,
  "ok": true,
  "schema": "trellis.doctor/1"
}
