tests/snapshots/json_contract__doctor_json_contract_when_passing.snap
---
source: tests/json_contract.rs
expression: "json_output(&fixture(\"basic\"), &[\"doctor\", \"--format\", \"json\"], true)"
---
{
  "applied": [],
  "auto_members": false,
  "configless": false,
  "findings": [
    {
      "check": "changelog_adoption",
      "file": "packages/lat_core/CHANGELOG.md",
      "fixable": true,
      "message": "package `lat_core` has changelog history that Trellis has not batched yet; it will be adopted on the next release",
      "package": "lat_core",
      "severity": "warning"
    },
    {
      "check": "changelog_adoption",
      "file": "packages/lat_mid/CHANGELOG.md",
      "fixable": true,
      "message": "package `lat_mid` has changelog history that Trellis has not batched yet; it will be adopted on the next release",
      "package": "lat_mid",
      "severity": "warning"
    },
    {
      "check": "changelog_adoption",
      "file": "packages/lat_cli/CHANGELOG.md",
      "fixable": true,
      "message": "package `lat_cli` has changelog history that Trellis has not batched yet; it will be adopted on the next release",
      "package": "lat_cli",
      "severity": "warning"
    }
  ],
  "fixes": [
    {
      "description": "adopt existing changelog history for `lat_core`",
      "file": "packages/lat_core/CHANGELOG.md",
      "kind": "adopt_changelog",
      "package": "lat_core"
    },
    {
      "description": "adopt existing changelog history for `lat_mid`",
      "file": "packages/lat_mid/CHANGELOG.md",
      "kind": "adopt_changelog",
      "package": "lat_mid"
    },
    {
      "description": "adopt existing changelog history for `lat_cli`",
      "file": "packages/lat_cli/CHANGELOG.md",
      "kind": "adopt_changelog",
      "package": "lat_cli"
    }
  ],
  "ok": true,
  "package_lifecycles": [
    {
      "lifecycle": "hex",
      "name": "lat_core"
    },
    {
      "lifecycle": "hex",
      "name": "lat_mid"
    },
    {
      "lifecycle": "hex",
      "name": "lat_cli"
    },
    {
      "lifecycle": "workspace",
      "name": "package_a"
    }
  ],
  "packages": 4,
  "schema": "trellis.doctor/1"
}
