tests/snapshots/json_contract__doctor_json_contract_with_findings.snap
---
source: tests/json_contract.rs
expression: payload
---
{
  "applied": [],
  "auto_members": false,
  "configless": false,
  "findings": [
    {
      "check": "exclusion_glob",
      "file": "gleam.toml",
      "fixable": false,
      "message": "`build` exclusion glob `nope/*` matches no member (typo?)",
      "severity": "error"
    },
    {
      "check": "lockfile_drift",
      "file": "packages/lat_mid/manifest.toml",
      "fixable": true,
      "message": "packages/lat_mid/manifest.toml locks `lat_core` at 1.1.0 but its gleam.toml says 1.2.0 (run the version-apply lockfile patch)",
      "package": "lat_mid",
      "severity": "error"
    },
    {
      "check": "changelog_missing",
      "file": "packages/lat_core/CHANGELOG.md",
      "fixable": true,
      "message": "releasable package `lat_core` has no CHANGELOG.md",
      "package": "lat_core",
      "severity": "warning"
    },
    {
      "check": "changelog_adoption",
      "file": "packages/lat_mid/CHANGELOG.md",
      "fixable": true,
      "message": "package `lat_mid` has changelog history that Trellis has not batched yet; it will be adopted on the next release",
      "package": "lat_mid",
      "severity": "warning"
    },
    {
      "check": "changelog_adoption",
      "file": "packages/lat_cli/CHANGELOG.md",
      "fixable": true,
      "message": "package `lat_cli` has changelog history that Trellis has not batched yet; it will be adopted on the next release",
      "package": "lat_cli",
      "severity": "warning"
    },
    {
      "check": "changelog_fragment",
      "file": ".changes/unreleased/ghost-1.toml",
      "fixable": false,
      "message": "fragment `ghost-1.toml`: package `ghost` is not a workspace member",
      "package": "ghost",
      "severity": "error"
    }
  ],
  "fixes": [
    {
      "description": "patch locked versions in packages/lat_mid/manifest.toml",
      "file": "packages/lat_mid/manifest.toml",
      "kind": "patch_lockfile",
      "package": "lat_mid"
    },
    {
      "description": "seed CHANGELOG.md for `lat_core`",
      "file": "packages/lat_core/CHANGELOG.md",
      "kind": "seed_changelog",
      "package": "lat_core"
    },
    {
      "description": "adopt existing changelog history for `lat_mid`",
      "file": "packages/lat_mid/CHANGELOG.md",
      "kind": "adopt_changelog",
      "package": "lat_mid"
    },
    {
      "description": "adopt existing changelog history for `lat_cli`",
      "file": "packages/lat_cli/CHANGELOG.md",
      "kind": "adopt_changelog",
      "package": "lat_cli"
    }
  ],
  "ok": false,
  "package_lifecycles": [
    {
      "lifecycle": "hex",
      "name": "lat_core"
    },
    {
      "lifecycle": "hex",
      "name": "lat_mid"
    },
    {
      "lifecycle": "hex",
      "name": "lat_cli"
    },
    {
      "lifecycle": "workspace",
      "name": "package_a"
    }
  ],
  "packages": 4,
  "schema": "trellis.doctor/1"
}
