tests/snapshots/json_contract__exec_json_contract_with_a_failure.snap
---
source: tests/json_contract.rs
expression: payload
---
{
  "command": [
    "sh",
    "-c",
    "exit 3"
  ],
  "ok": false,
  "results": [
    {
      "command": "exit 3",
      "duration_ms": "[ms]",
      "exit_code": 3,
      "package": "lat_core",
      "path": "packages/lat_core",
      "status": "failed"
    },
    {
      "duration_ms": "[ms]",
      "package": "lat_mid",
      "path": "packages/lat_mid",
      "status": "skipped"
    },
    {
      "duration_ms": "[ms]",
      "package": "lat_cli",
      "path": "packages/lat_cli",
      "status": "skipped"
    },
    {
      "duration_ms": "[ms]",
      "package": "package_a",
      "path": "examples/package-a",
      "status": "skipped"
    }
  ],
  "schema": "trellis.exec/1"
}
